cloudformation/lambda/SampleNetwork.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"AWS CloudFormation Sample Template VPC_with_PublicIPs_And_DNS: Sample template that creates a VPC with DNS and public IPs enabled. Note that you are billed for the AWS resources that you use when you create a stack from this template.",
  "Resources":{
    "VPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "EnableDnsSupport":"true",
        "EnableDnsHostnames":"true",
        "CidrBlock":"10.0.0.0/16"
      }
    },
    "PublicSubnet":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "CidrBlock":"10.0.1.0/24"
      }
    },
    "PublicSubnetB":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "CidrBlock":"10.0.2.0/24"
      }
    },
    "InternetGateway":{
      "Type":"AWS::EC2::InternetGateway"
    },
    "VPCGatewayAttachment":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "InternetGatewayId":{
          "Ref":"InternetGateway"
        }
      }
    },
    "PublicRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        }
      }
    },
    "PublicRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn":"VPCGatewayAttachment",
      "Properties":{
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        },
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{
          "Ref":"InternetGateway"
        }
      }
    },
    "PublicSubnetRouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet"
        },
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        }
      }
    },
    "PublicSubnetNetworkAclAssociation":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet"
        },
        "NetworkAclId":{
          "Fn::GetAtt":[
            "VPC",
            "DefaultNetworkAcl"
          ]
        }
      }
    },
    "WebServerSecurityGroup":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"Enable HTTP ingress",
        "VpcId":{
          "Ref":"VPC"
        },
        "SecurityGroupIngress":[
          {
            "IpProtocol":"tcp",
            "FromPort":"80",
            "ToPort":"80",
            "CidrIp":"0.0.0.0/0"
          }
        ]
      }
    }
  },
  "Outputs":{
    "VPCId":{
      "Description":"VPC ID",
      "Value":{
        "Ref":"VPC"
      }
    },
    "PublicSubnet":{
      "Description":"The subnet ID to use for public web servers",
      "Value":{
        "Ref":"PublicSubnet"
      }
    },
    "WebServerSecurityGroup":{
      "Description":"The security group ID to use for public web servers",
      "Value":{
        "Fn::GetAtt":[
          "WebServerSecurityGroup",
          "GroupId"
        ]
      }
    }
  }
}
